--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: example
-description: A new Flutter project.
+name: socks_socket_example
+description: Demonstrates how to use the socks_socket package.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,10 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
+  socks_socket:
+    path: ..
+  tor_ffi_plugin:
+    # When depending on this package from a real application you should use:
+    #   tor_ffi_plugin: ^x.y.z
+    # See https://dart.dev/tools/pub/dependencies#version-constraints
+    # The example app is bundled with the plugin so we use a path dependency on
+    # the parent directory to use the current plugin's version.
+    git: https://github.com/cypherstack/tor # TODO: rework example app to use user-provided Tor proxy.
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  socks5_proxy: ^1.0.3+dev.3
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
